Added json custom hardnesses